--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
     rel="stylesheet"
@@ -23,7 +23,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
 
-    <title>Aplikasi Absensi Siswa</title>
+    <title>Aplikasi Pembuat Soal Online</title>
   </head>
 
   <body class="bg-gray-100 text-gray-900 font-sans">
